project(Pianobar-QT)
cmake_minimum_required(VERSION 2.6)
find_package(KDE4 REQUIRED)
include (KDE4Defaults)
include_directories(${QT_INCLUDES} ${KDE4_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ./libwaitress)
set(Pianobar-QT_SRCS QPlaylist.cpp QStationsList.cpp  pandorasong.cpp pandorastation.cpp pianosteps.cpp pianohelper.cpp Pianobar-QT.cpp Pianobar_QT_MainWindow.cpp main.cpp)
qt4_automoc(${Pianobar-QT_SRCS})
add_executable(Pianobar-QT ${Pianobar-QT_SRCS})
target_link_libraries(Pianobar-QT ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${KDE4_KDEUI_LIBS} phonon piano gcrypt gnutls json)
